--- a/angular/PortalOSK/src/app/products/product-card/product-card.component.html
+++ b/angular/PortalOSK/src/app/products/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <div class="card-block">
 
-    <div class="card-body  mx-auto mw-900 font-size-2">
+    <div class="card-body  mx-auto mw-900 ">
         <div class="row my-3">
             <h4 class="col card-title">Kurs Lipcowy 10.07.2019</h4>
             <h5 class="col-3 card-title"> <span class="badge badge-danger">Kategoria B</span>
