--- a/angular/PortalOSK/src/app/products/product-events/product-events.component.html
+++ b/angular/PortalOSK/src/app/products/product-events/product-events.component.html
@@ -1,44 +1,13 @@
-<button type="button" (click)="backProductCard()" class="btn btn-outline-primary m-2"> <i
-        class="fa fa-arrow-left font-size-3 text-dark" aria-hidden="true"></i></button>
+<!-- <button type="button" (click)="backProductCard()" class="btn btn-outline-primary m-2"> <i
+        class="fa fa-arrow-left font-size-3 text-dark" aria-hidden="true"></i></button> -->
 <div class="m-5">
-   <!--  <div class="container">
-        <div class="shadow p-3 mb-3 bg-white rounded bg-gradient-secondary text-white text-right font-size-2"
-            *ngFor='let event of events'>
-
-            <div class="">
-                <a class="" aria-haspopup="true" aria-expanded="false"><i
-                        class="fas fa-ellipsis-h font-size-2-5 pr-3"></i></a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-                <div class="float-left text-left px-5">
-                    <h2 class="mx-1">{{event.description}}</h2>
-                    <div class="">
-                        <p class="m-1 p-1 "> <i class="fas fa-chalkboard-teacher font-size-2 pt-1 "></i> <span
-                                class="m-1 font-size-2 pr-2">Grzegorz Biś</span></p>
-                        <p class="m-1 p-1"> <i class="fa fa-mobile-alt font-size-2 pt-1 " aria-hidden="true"></i>
-                            +48607657434</p>
-                    </div>
-                </div>
-                <div class="px-5">
-                    <p class="m-3"><i class="far fa-calendar-alt p-2"></i> {{getNextBookingDate(event.dateFrom)}}
-                        <i class="far fa-clock  p-2"></i>
-                        {{getNextBookingTime(event.dateFrom) + '-' +getNextBookingTime(event.dateTo) }} <br>
-                        <i class="fas fa-map-marker-alt p-2 "></i>
-                        Plac Manewrowy, Radomsko</p>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
+  
     <div class="card">
-        <div class="card-header card-header-text card-header-warning bg-gradient-secondary text-white">
+        <!-- <div class="card-header card-header-text card-header-warning bg-gradient-secondary text-white">
             <div class="card-text">
                 <h4 class="card-title">Umówione Zajęcia</h4>
             </div>
-        </div>
+        </div> -->
         <div class="card-body table-responsive">
             <table class="table table-hover">
                 <thead class="text-danger">
