--- a/angular/PortalOSK/src/styles.scss
+++ b/angular/PortalOSK/src/styles.scss
@@ -79,9 +79,14 @@ body {
   }
 
 }
-
+.w-1rem{
+  width: 2rem;
+}
+.w-2rem{
+  width: 4rem;
+}
 .w-3rem{
-  width: 8rem;
+  width: 6rem;
 }
 
 .mobile-table-container{
@@ -122,8 +127,9 @@ body {
 .w700{
   max-width: 700px !important;
 }
-.modal-dialog {
+.myDialog {
   max-width: 1114px;
+ // max-width: 200rem;
   //margin: 1.75rem auto;
  // min-height: 1000px;
   box-sizing: border-box;
@@ -178,3 +184,73 @@ body {
 .container-fluid{
 padding: 0 !important;
 }
+
+
+//modal styles
+
+/*.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.modal-dialog {
+  position: fixed;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+
+.modal-content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border: 2px solid #3c7dcf;
+  border-radius: 0;
+  box-shadow: none;
+}
+
+.modal-header {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 50px;
+  padding: 10px;
+  background: #6598d9;
+  border: 0;
+}
+
+.modal-title {
+  font-weight: 300;
+  font-size: 2em;
+  color: #fff;
+  line-height: 30px;
+}
+
+.modal-body {
+  position: absolute;
+  top: 50px;
+  bottom: 60px;
+  width: 100%;
+  font-weight: 300;
+  overflow: auto;
+}
+
+.modal-footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 60px;
+  padding: 10px;
+  background: #f1f3f5;
+}
+*/
+/// end of modal styles
